fixing overlapping flowboxs

--- a/styles.css
+++ b/styles.css
@@ -1137,7 +1137,7 @@ body.is-fullscreen .fullscreen-btn .icon-compress {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: hidden;
   cursor: grab;
   transform-origin: 0 0;
@@ -1179,7 +1179,8 @@ body.is-fullscreen .fullscreen-btn .icon-compress {
 /* Flow Boxes Container */
 .flow-boxes {
   position: relative;
-  width: 100%;
+  min-width: 100%;
+  width: auto;
   height: auto;
 }
 
